Bug 282065 - kmail2 - local maildir cannot be renamed
Summary: kmail2 - local maildir cannot be renamed
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.7
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-09-15 08:56 UTC by hemathor
Modified: 2011-09-16 08:36 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.7.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description hemathor 2011-09-15 08:56:55 UTC
Version:           4.7 (using KDE 4.7.1) 
OS:                Linux

after adding a local maildir, it cannot be renamed. it has a strange name like 'akonadi_maildir_resource_2'

Reproducible: Always

Steps to Reproduce:
add a local maildir account

Actual Results:  
local maildir is named 'akonadi_maildir_resource_<x>'

Expected Results:  
a custom name should be able to be given
Comment 1 Laurent Montel 2011-09-16 08:35:16 UTC
Git commit 78ab54a0b703ebc87966e265197676f37e082d68 by Montel Laurent.
Committed on 16/09/2011 at 10:34.
Pushed by mlaurent into branch 'master'.

Fix Bug 282065 - kmail2 - local maildir cannot be renamed

FIXED-IN: 4.7.2
BUG: 282065

M  +1    -4    mailcommon/collectiongeneralpage.cpp

http://commits.kde.org/kdepim/78ab54a0b703ebc87966e265197676f37e082d68
Comment 2 Laurent Montel 2011-09-16 08:36:14 UTC
Git commit 8756c15697c060582f4e1df7643fd42d8a18f8bc by Montel Laurent.
Committed on 16/09/2011 at 10:34.
Pushed by mlaurent into branch '4.7'.

Fix Bug 282065 - kmail2 - local maildir cannot be renamed

FIXED-IN: 4.7.2
BUG: 282065
(cherry picked from commit 78ab54a0b703ebc87966e265197676f37e082d68)

M  +1    -4    mailcommon/collectiongeneralpage.cpp

http://commits.kde.org/kdepim/8756c15697c060582f4e1df7643fd42d8a18f8bc