Fix Bug 282065 - kmail2 - local maildir cannot be renamed

FIXED-IN: 4.7.2
BUG: 282065